fixed squished image bug

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -675,7 +675,7 @@ a {
   }
   .img-fluid {
     width: 90vw;
-    height: auto;
+    height: auto !important;
     margin: none;
   }
   /* 
